--- a/assignment2/requirements.txt
+++ b/assignment2/requirements.txt
@@ -1,8 +1,5 @@
-numpy>=1.16.4
-pandas>=0.24.2
-sklearn>=0.21.2
-tensorflow>=1.13.1
-Keras>=2.2.4
-seaborn>=0.8.1
-matplotlib>=2.2.2
+numpy>=1.17.2
+matplotlib>=3.1.1
+tensorflow-gpu>=1.15.0
+
 
