--- a/assignment2/requirements.txt
+++ b/assignment2/requirements.txt
@@ -1,5 +1,9 @@
 numpy>=1.17.2
+pandas>=0.25.1
 matplotlib>=3.1.1
-tensorflow-gpu>=1.15.0
+tensorflow-gpu==1.15.0
+scikit-learn>=0.21.3
+nltk>=3.4.5
+
 
 
